# parallel-BnB-for-P-Cmax

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  collection_of_commands_for_copy.txt  experiment.sh  experiment2.sh  experiment3.sh  experimentGrowt.sh  experimentLocal.sh  experimentRefactorGrowt.sh  experimentRefactorGrowtBerndt.sh  experimentRefactorGrowtFrangioni.sh  experimentRefactorGrowtSchreiber.sh  experimentRefactorTBB.sh  experimentTBB.sh  experimentfilter.sh  makefile  o.txt#  off  test_task_group.cpp
benchmarkExecuter/: combined.sh  combined_parameter.sh  experimentRefactorGrowtAnni.sh  experimentRefactorGrowtLawrinenko.sh  experimentRefactorTBBAnni.sh  reference.sh
benchmarks/sampledBenchmarks/: anni-100.txt  anni-25.txt  anni-combined.txt  berndt-100.txt  berndt-25.txt  berndt-50.txt  berndt-combined.txt  cnf-100.txt  cnf-25.txt  cnf-combined.txt  frangioni-100.txt  frangioni-25.txt  frangioni-50.txt  frangioni-combined.txt  graph-100.txt  graph-25.txt  graph-combined.txt  huebner-100.txt  huebner-25.txt  huebner-50.txt  laupichler-100.txt  laupichler-25.txt  laupichler-combined.txt  lawrinenko-100.txt  lawrinenko-25.txt  lawrinenko-50.txt  lawrinenko-combined.txt  lehmann-100.txt  lehmann-25.txt  lehmann-50.txt  planted-100.txt  planted-25.txt  planted-50.txt  schreiber-100.txt  schreiber-25.txt  schreiber-50.txt
dst/: experiment1
results/: exp1  exp12  filteredRun_class1.txt  filteredRun_class2.txt  filteredRun_class3.txt  filteredRun_class4.txt  filteredRun_class5.txt  filteredRun_class6.txt  filteredRun_class7.txt  servertestResult
src/: Ideas_or_TODOS.txt  main.cpp
src/BnB/: BnB.cpp  BnB.h  BnB_base.cpp  BnB_base.h  BnB_base_custom_work_stealing.cpp  BnB_solveSubinstances.cpp  ST.h  STImpl.cpp  STImplGrowt.cpp  STImplSimpl.cpp  STImplSimplCustomLock.cpp
src/BnB/LowerBounds/: lowerBounds.h  lowerBounds_ret.cpp  lowerBounds_sponsoredByOpenAI.cpp
src/BnB/customWorkStealing/: TaskHolder.hpp  task.hpp
src/BnB/hashing/: hashFuntions.hpp
src/BnB/hashmap/: FollyHashMap.cpp  GrowtHashMap.cpp  IConcurrentHashMap.h  JunctionHashMap.cpp  TBBHashMap.cpp
src/BnB/hashmap/SingleThreadedHashMap/: ISingleThreadedHashMap.h  stdHashMap.cpp
src/BnB/hashmap/delayedHashMaps/: IDelayedMap.h  stdDelayedMap.cpp
src/BnB/threadLocal/: threadLocal.cpp  threadLocal.h
src/_refactoredBnB/: SolverConfig.hpp  executeSolver.cpp  executeSolverGrowt.cpp  executeSolverTBB.cpp  main.cpp  mainParameterEval.cpp
src/_refactoredBnB/ST/: FingerPrintUtil.hpp  ST_combined.hpp  customSharedLock.hpp
src/_refactoredBnB/ST/Hashmaps/: CustomUint64.hpp  GrowtHashMap.hpp  GrowtHashMap_refactored.hpp  TBBHashMap_refactored.hpp
src/_refactoredBnB/ST/Hashmaps/hashing/: hashing.hpp
src/_refactoredBnB/Solver/: solver_base.hpp
src/_refactoredBnB/Structs/: DelayedTasksList.hpp  Difficulty.hpp  GistStorage.hpp  STEntry.hpp  SegmentedStack.hpp  TaskContext.hpp  globalValues.hpp  memory_monitor.hpp  structCollection.hpp
src/customBnB/: CustomTaskGroup.hpp  customBnB_base.hpp  globalValues.cpp  util.hpp
src/customBnB/ST/: STImplSimplCustomLock.cpp  ST_custom.h  customSharedLock.hpp
src/customBnB/ST/combineGistAndDelayed/: ST_combined.hpp
src/customBnB/ST/combineGistAndDelayed/hashmap/: CustomUint64.hpp  GrowtHashMap.cpp  IConcurrentHashMapCombined.h  TBBHashMapCombined.cpp
src/customBnB/ST/combineGistAndDelayed/hashmap/delayedHashMaps/: IDelayedMap.h  stdDelayedMap.cpp
src/customBnB/ST/combineGistAndDelayed/hashmap/hashing/: hashing.hpp
src/customBnB/ST/hashmap/: GrowtHashMap.cpp  IConcurrentHashMap.h  TBBHashMap.cpp
src/customBnB/ST/hashmap/delayedHashMaps/: IDelayedMap.h  stdDelayedMap.cpp
src/customBnB/ST/hashmap/hashing/: hashing.hpp
src/customBnB/structures/: CustomTask.hpp  DelayedTasksList.hpp  FastRandom.hpp  GistStorage.hpp  ITaskHolder.h  STEntry.hpp  SegmentedStack.hpp  SuspendedTaskHolder.hpp  TaskHolder.hpp
src/customBnB/structures/delayedStructures/: DelayedTasksListPointer.hpp
src/customBnB/threadLocal/: threadLocal.cpp  threadLocal.h
src/debugging/: debugger.sh
src/experiments/: Profiler.cpp  ProfilerServer.cpp  Profiler_refactored.cpp  collectFilteredInstances.py  filtered_instances.txt  filtered_instances_new_without1.txt  filtered_instances_without1.txt  lawrinenko_broadSelection.txt  lawrinenko_selection.txt  lawrinenko_test.cpp  lawrinenko_test2.cpp  ref_run_benchmarks.py  samplebenchmarks.py  test_to_filter_benchmark.cpp
src/experiments/readData/: readData.cpp  readData.h
src/plotting/: compare_executions.py  compare_executions_thesis.py  compare_param_thesis.py  plotter.py  plotter_thesis.py  sequentialCompare.py
